Bug Fix Dark Mode

--- a/src/components/pages/education/Certifications.module.css
+++ b/src/components/pages/education/Certifications.module.css
@@ -28,6 +28,6 @@ a {
 }
 
 a:hover {
-  color: #333;
+  color: var(--header_color);
   font-weight: 600;
 }
